# homebase

./: .gitignore  Cargo.toml  README.md  adding-a-favicon-in-2024.html  building-a-new-site-with-astro.html  creating-motion-graphics-in-isadora.html  design-workshop-posters.html  generating-a-content-index.html  index.html  launching-facebook-avatars.html  music-stats.html  york-sheridan-design-website.html
.github/workflows/: deploy.yml  deploy_pages..yml
content/post/: Adding a Favicon in 2024.md  Building a new site with Astro.md  Generating a Content Index.md
content/posts/: 2012-06-17-york-sheridan-design-website.md  2013-11-05-creating-visualizations-in-isadora.md  2015-08-21-music-stats.md  2015-11-25-design-workshop-posters.md  2019-05-03-launching-facebook-avatars.md  Building a new site with Astro.md  index.toml
content/posts/2012/: York Sheridan Design Website.md
content/posts/2013/: Creating Visualizations in Isadora.md
content/posts/2015/: Design Workshop Posters.md  Music Stats.md
content/posts/2019/: Launching Facebook Avatars.md
content/posts/2024/: Adding a Favicon in 2024.md  Generating a Content Index.md
src/: blue_sky.rs  content.rs  context.rs  includes.rs  main.rs  markdown.rs  services.rs  ssg.rs  utils.rs
src/content/: posts.rs
src/includes/: global.css
src/services/: blue_sky.rs  content.rs  site_generator.rs
src/utils/: fs.rs  print_err.rs
